Trying to fix some weirdness on mobile.

--- a/static/css/event-details.css
+++ b/static/css/event-details.css
@@ -32,6 +32,7 @@
         flex-direction: column;
         width: 100vw;
         align-items: center;
+        overflow-y: scroll;
     }
 
     #event-details-container {
